--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,6 +18,7 @@
         <activity android:name=".UnitListActivity"></activity>
         <activity android:name=".ChapterActivity"></activity>
         <activity android:name=".LessonActivity"></activity>
+        <activity android:name=".QuestionActivity"></activity>
     </application>
 
 </manifest>
