--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,6 +16,7 @@
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
+        <activity android:name=".MainMenuActivity"></activity>
         <activity android:name=".UnitListActivity"></activity>
         <activity android:name=".ChapterActivity"></activity>
         <activity android:name=".LessonActivity"></activity>
