Add activity for settings

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,6 +22,7 @@
         <activity android:name=".LessonActivity"></activity>
         <activity android:name=".QuestionActivity"></activity>
         <activity android:name=".CompleteActivity"></activity>
+        <activity android:name=".SettingsActivity"></activity>
     </application>
 
 </manifest>
