--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,26 +1,30 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-          package="ca.sfu.g15.accelmath">
+    package="ca.sfu.g15.accelmath">
 
     <application
         android:allowBackup="true"
+        android:background="@mipmap/he"
         android:icon="@mipmap/accelmath_logo"
         android:label="@string/app_name"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme"
-        android:background="@mipmap/he">
+        android:theme="@style/AppTheme">
         <activity android:name=".MenuActivity">
             <intent-filter>
-                <action android:name="android.intent.action.MAIN"/>
+                <action android:name="android.intent.action.MAIN" />
 
-                <category android:name="android.intent.category.LAUNCHER"/>
+                <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".UnitListActivity"></activity>
-        <activity android:name=".ChapterActivity"></activity>
-        <activity android:name=".LessonActivity"></activity>
-        <activity android:name=".QuestionActivity"></activity>
-        <activity android:name=".CompleteActivity"></activity>
+        <activity android:name=".UnitListActivity" />
+        <activity android:name=".ChapterActivity" />
+        <activity android:name=".LessonActivity" />
+        <activity android:name=".QuestionActivity" />
+        <activity android:name=".CompleteActivity" />
+        <activity
+            android:name=".QuoteActivity"
+            android:label="@string/title_activity_quote"
+            android:theme="@style/AppTheme.NoActionBar"></activity>
     </application>
 
 </manifest>
