--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-          package="ca.sfu.g15.accelmath">
+          package="ca.sfu.group15.accelmath">
 
     <uses-permission android:name="android.permission.INTERNET"/>
 
@@ -11,23 +11,23 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         android:background="@mipmap/he">
-        <activity android:name=".MenuActivity">
+        <activity android:name="ca.sfu.group15.accelmath.MenuActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
 
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
-        <activity android:name=".MainMenuActivity"></activity>
-        <activity android:name=".UnitListActivity"></activity>
-        <activity android:name=".ChapterActivity"></activity>
-        <activity android:name=".LessonActivity"></activity>
-        <activity android:name=".QuestionActivity"></activity>
-        <activity android:name=".CompleteActivity"></activity>
-        <activity android:name=".SettingsActivity"></activity>
-        <activity android:name=".ProgressActivity"></activity>
+        <activity android:name="ca.sfu.group15.accelmath.MainMenuActivity"></activity>
+        <activity android:name="ca.sfu.group15.accelmath.UnitListActivity"></activity>
+        <activity android:name="ca.sfu.group15.accelmath.ChapterActivity"></activity>
+        <activity android:name="ca.sfu.group15.accelmath.LessonActivity"></activity>
+        <activity android:name="ca.sfu.group15.accelmath.QuestionActivity"></activity>
+        <activity android:name="ca.sfu.group15.accelmath.CompleteActivity"></activity>
+        <activity android:name="ca.sfu.group15.accelmath.SettingsActivity"></activity>
+        <activity android:name="ca.sfu.group15.accelmath.ProgressActivity"></activity>
         <activity
-            android:name=".QuoteActivity"
+            android:name="ca.sfu.group15.accelmath.QuoteActivity"
             android:label="@string/title_activity_quote"
             android:theme="@style/AppTheme.NoActionBar"></activity>
     </application>
