--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,4 +32,5 @@ dependencies {
     compile 'com.android.support:recyclerview-v7:25.2.0'
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
     compile 'io.github.kexanie.library:MathView:0.0.6'
+    compile 'com.github.medyo:android-about-page:1.2'
 }
