--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,7 @@ android:
   components:
     # Uncomment the lines below if you want to
     # use the latest revision of Android SDK Tools
-    # - tools
+    - tools
     # - platform-tools
 
     # The BuildTools version used by your project
@@ -11,3 +11,10 @@ android:
 
     # The SDK version used to compile your project
     - android-25
+    
+    # Support library
+    - extra-android-support
+    - extra-android-m2repository
+    
+script:
+- chmod +x ./gradlew
